# brainfuck_compilers

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.alpine  Dockerfile.ubuntu  factorial.s  gas_hello.s  justfile  linux_64_gas_hello  linux_64_gas_hello.s  macos_64_exit.s  macos_64_gas_hello  macos_64_gas_hello.s  macos_64_hello_gas  macos_64_hello_gas.s  macos_hello_world_gas.s  outputThisCode.js  readme.md  x86_64_macOS_hello_world  x86_64_macOS_hello_world.s
examples/: readme.md
examples/aarch64/: aarch64_linux_hello_world.out  aarch64_linux_hello_world.s  bf_basics.s  bf_hello_world.out  bf_hello_world.s  boilerplate.s  echo_char.s  empty.s  exit.out  exit.s  hello_world.out  hello_world.s  load_byte_from_label.s  other_hello_world.s  print_a.s  readme.md  switch_case.s  testing.out  testing.s
examples/c/: hello_world.c  print_eof.c  readme.md
examples/llvm-ir/: bf_basics.ll  bf_basics_2.ll  bf_basics_4.ll  booleans.ll  branching_globals.ll  branching_locals.ll  global.ll  max.ll  switch_case.ll  write_a.ll
examples/llvm_ir/: bf_basics.ll  bf_basics_3.ll  bf_basics_4.ll  branching_locals_2.ll  exit.ll  (+9 more)
input/: fibonacci.b  guess_number.b  head.b  hello_world.b  mandlebrot.b  mini_hello_world.b  prints_abc.b  readme.md  rot13.b  squares.b  tic_tac_toe.b  tictactoe.b
output/: readme.md
src/: aarch64_boilerplate.s  bf_interpreter.rs  bf_interpreter2.rs  bf_to_aarch64_compiler.rs  bf_to_llvm_ir_compiler.rs  bf_to_wasm32_wasi_compiler.rs  bf_to_x86_64_compiler.rs  interpreter.rs  lib.rs  lib2.rs  llvm_ir_boilerplate.ll  readme.md  wasm32_wasi_boilerplate.wat
(+131 files in other folders)
